ncc/testsuite/positive/unchecked.n

public module TestUnchecked
{
  private TestIt (x : int) : int
  {
    unchecked {      
      def x = System.Int32.MaxValue + 20 + x;
      def y = System.Int32.MinValue * -1;
      def z = System.Int32.MinValue - System.Int32.MaxValue + 2 * x;
      
      x + y + z
    }
  }
  
  public Main () : void
  {
    ignore (TestIt (10))
  }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
